--- a/css/zzz-ajout-dweb.css
+++ b/css/zzz-ajout-dweb.css
@@ -29,6 +29,10 @@ div#cxpmClientAccountWidget .not-logged a, div#cxpmClientAccountWidget .logged a
 
 .openCapMobile .openCapTrigger i.cap-icon-user-circle-o {
     padding-right: 7px;
+    display: inline-block;
+    padding-top: 0px;
+    margin-top: 0px;
+    float: left;
 }
 
 div#cxpmClientAccountWidget .logged span#widgetFirstname {
@@ -98,4 +102,6 @@ div#cxpmClientAccountWidget .logged span#widgetFirstnameText {
 #cxpmClientAccountWidget .widget-text span a, #cxpm-connect-sso-dropdown .widget-text span a {
     font-size: 16px;
     margin-top: -5px;
+    display: block;
+    margin-top: -9px;
 }
