--- a/css/zzz-ajout-dweb.css
+++ b/css/zzz-ajout-dweb.css
@@ -125,3 +125,55 @@ header.site-banner #cxpmClientAccountWidget i.cap-icon-user-circle-o{
 #cxpmClientAccountWidget .widget-text, #cxpm-connect-sso-dropdown .widget-text {
     padding-top: 0px;
 }
+
+/***** STYLE LOGOTHEQUE *****/
+
+.logotheque-style table {
+   width: 100%;
+    border-spacing: 15px 0px;
+    border-collapse: separate;
+}
+
+.logotheque-style figure {
+    text-align: center;
+    margin: 0 auto;
+    border: 0;
+}
+
+.logotheque-style .article-content table tbody tr:nth-child(odd) {
+    background-color: transparent;
+}
+
+.logotheque-style table td {
+    border: 0;
+}
+
+.logotheque-style table tr:nth-child(2) td {
+    /* background: red; */
+    -webkit-box-shadow: 0px 15px 22px -23px rgba(128,128,128,1);
+    -moz-box-shadow: 0px 15px 22px -23px rgba(128,128,128,1);
+    box-shadow: 0px 15px 22px -23px rgba(128,128,128,1);
+    border-left: #f5f5f5 1px solid;
+    border-right: #f5f5f5 1px solid;
+    border-bottom: #f5f5f5 1px solid;
+}
+.logotheque-style table tr:nth-child(1) td {
+    -webkit-box-shadow: 0px -10px 22px -23px rgba(128,128,128,1);
+    -moz-box-shadow: 0px -10px 22px -23px rgba(128,128,128,1);
+    box-shadow: 0px -10px 19px -23px rgba(128,128,128,1);
+	    border: #f5f5f5 1px solid;
+}
+
+.logotheque-style .lien2 {
+    text-align: center;
+    display: block;
+    width: 35%;
+    margin: 0 auto;
+    border: 1px solid #f5f5f5;
+    padding: 7px;
+    border-radius: 10px;
+}
+
+.logotheque-style:last-child table {
+    margin-bottom: 30px;
+}
