--- a/css/styles-gourmet.css
+++ b/css/styles-gourmet.css
@@ -2283,5 +2283,7 @@ body.is-mac .quicklinks.links .ql-list { margin: -161px 0 0 343px; }
 .newsletter-form .form-close:hover:after { background: #161615; }
 
 
-#zone4 .quicklinks.links { display: none; }
 
+
+
+#zone4 .quicklinks.links, .article-wrapper .at-theme, .article-wrapper .at-tag { display: none; }
