--- a/css/styles-gourmet.css
+++ b/css/styles-gourmet.css
@@ -1418,44 +1418,6 @@ body { min-width: 1260px; min-width: 1120px; font-family: 'Flama', sans-serif; b
 .block.social-sharing .sr-item-txt,
 .block.social-sharing .sr-item:before { display: none; }
 
-/* ------------------------------------------------------------ *\
-  Popup
-\* ------------------------------------------------------------ */
-
-.newsletter-form { position: fixed; display: block !important; width: 100%; height: 100%; top: 0; left: 0; opacity: 0; visibility: hidden; background: rgba(0, 0, 0, 0.8); z-index: 15; 
-  transition: opacity .3s, visibility .3s; 
-}
-.newsletter-form.form-shown { opacity: 1; visibility: visible; }
-
-.newsletter-form p { padding-right: 120px; margin: 0; font-size: 15px; line-height: 1.33; color: #1d1d1b; }
-
-.newsletter-form .cxp-newsletter { position: absolute; width: 545px; height: 296px; top: 50%; left: 50%; padding: 35px 43px 51px 50px; margin: -136px 0 0 -272px; background: url(gfx/newsletter-bg.jpg) no-repeat center center; 
-  background-size: cover; 
-}
-.newsletter-form .inside { padding: 0; }
-.newsletter-form .nf-title { font-family: 'Flama', sans-serif; font-size: 35px; font-weight: 300; letter-spacing: -0.03em; color: #383432; padding: 0; margin: 0 0 21px; border: 0; }
-
-.newsletter-form .form-close { position: absolute; width: 24px; height: 24px; top: 20px; right: 20px; background: url(gfx/popup-close.png) no-repeat 0 0; 
-  background-size: 100% 100%; 
-  transition: opacity .3s; 
-}
-.newsletter-form .form-close:hover { opacity: .7; }
-
-.newsletter-form .nf-form-input { float: left; width: 290px; padding: 0; margin: 34px 0 0; }
-.newsletter-form .nf-form-input input { width: 290px; height: 39px; min-height: 39px; padding: 0 22px; border: 0; border-radius: 0; font-family: 'Flama', sans-serif; font-size: 14px; font-weight: 400;  color: #1d1d1b; background: #fff; }
-
-.newsletter-form .nf-form-input input::-webkit-input-placeholder { color: #1d1d1b !important; font-size: 14px !important; letter-spacing: 0.05em; font-style: italic !important; }
-.newsletter-form .nf-form-input input::-moz-placeholder { color: #1d1d1b !important; font-size: 14px !important; letter-spacing: 0.05em; font-style: italic !important; }
-.newsletter-form .nf-form-input input:-moz-placeholder { color: #1d1d1b !important; font-size: 14px !important; letter-spacing: 0.05em; font-style: italic !important; }
-.newsletter-form .nf-form-input input:-ms-input-placeholder { color: #1d1d1b !important; font-size: 14px !important; letter-spacing: 0.05em; font-style: italic !important; }
-
-.newsletter-form .nf-form-submit { float: right; padding: 0; margin: 34px 0 0; }
-.newsletter-form .nf-form-submit button { width: 161px; height: 52px; border: 0; font-family: 'Flama', sans-serif; font-size: 17px; font-weight: 300; letter-spacing: 0.1em;  color: #fff; text-transform: none; background: #383432; 
-  transition: background .3s; }
-.newsletter-form .nf-form-submit button:hover { background: #493849; }
-
-.newsletter-form .nf-form-submit button i,
-.newsletter-form label { display: none; }
 
 /* ------------------------------------------------------------ *\
   Cookies
@@ -2243,6 +2205,11 @@ body.is-mac .quicklinks.links .ql-list { margin: -161px 0 0 343px; }
 }
 
 
+
+
+
+
+
 /* ------------------------------------------------------------ *\
 	Newsletter form
 \* ------------------------------------------------------------ */
@@ -2254,25 +2221,26 @@ body.is-mac .quicklinks.links .ql-list { margin: -161px 0 0 343px; }
 
 .newsletter-form form { position: relative; }
 
-.newsletter-form .nf-main-content { display: inline-block; width: 100%; max-width: 545px; padding: 45px 70px 64px 50px; margin: 0; vertical-align: middle; -webkit-transform: scale(0); -ms-transform: scale(0); transform: scale(0); opacity: 0; visibility: hidden; font-size: 15px; line-height: 1.33; color: #545454; text-align: left; background: #fff; transition: opacity .3s, visibility .3s, -webkit-transform .3s; transition: transform .3s, opacity .3s, visibility .3s; transition: transform .3s, opacity .3s, visibility .3s, -webkit-transform .3s; }
-.newsletter-form .nf-title { margin: 0 0 28px; font-family: 'Flama', serif; font-size: 35px; font-weight: 300; color: #1d1d1b; padding: 0 0 10px; margin: 0 -582px 0 0; border: 0; display: block; text-transform: uppercase;  }
+.newsletter-form .nf-main-content { display: inline-block; width: 100%; max-width: 545px; padding: 45px 70px 84px 50px; margin: 0; vertical-align: middle; -webkit-transform: scale(0); -ms-transform: scale(0); transform: scale(0); opacity: 0; visibility: hidden; font-size: 15px; line-height: 1.33; color: #161616; text-align: left; background: #fff; transition: opacity .3s, visibility .3s, -webkit-transform .3s; transition: transform .3s, opacity .3s, visibility .3s; transition: transform .3s, opacity .3s, visibility .3s, -webkit-transform .3s; }
+.newsletter-form .nf-title { font-family: 'Flama', sans-serif!important; font-size: 60px; font-weight: 300; line-height: .75; color: #161615; margin: 0 0 28px; }
 
 .newsletter-form .form-close { position: absolute; width: 24px; height: 24px; top: 20px; right: 20px; z-index: 2; }
 .newsletter-form .form-close:before { -webkit-transform: rotate(45deg); -ms-transform: rotate(45deg); transform: rotate(45deg); }
 .newsletter-form .form-close:after { -webkit-transform: rotate(-45deg); -ms-transform: rotate(-45deg); transform: rotate(-45deg); }
 
 .newsletter-form .nf-form-submit { position: absolute; bottom: 0; right: 0; }
-.newsletter-form .nf-form-submit .btn-primary { padding-right: 28px; padding-left: 25px; }
+.newsletter-form .nf-form-submit .btn-primary { padding-right: 28px; padding-left: 25px; font-family: 'Flama', serif; }
 .newsletter-form .nf-form-submit .btn-primary:after { margin-left: 18px; }
+.newsletter-form .nf-form-submit .btn-primary .icon { display: none; }
 
 .newsletter-form .nf-form-input { float: none; width: 100%; padding-top: 33px; margin: 0; }
-.newsletter-form .nf-form-input input { display: block; width: 100%; height: 52px; min-height: 0; padding: 0 206px 0 20px; border: 1px solid #161616; border-radius: 0; font-size: 15px; font-weight: 300; color: #1d1d1b; }
+.newsletter-form .nf-form-input input.form-txt { display: block; width: 100%; height: 42px; min-height: 0; padding: 0 206px 0 20px; border: 1px solid #161616; border-radius: 0; font-size: 15px; font-weight: 700; color: #161615; }
 .newsletter-form .nf-form-input input::-webkit-input-placeholder { opacity: 1 !important; font-style: normal !important; color: #161615 !important; }
 .newsletter-form .nf-form-input input::-moz-placeholder { opacity: 1 !important; font-style: normal !important; color: #161615 !important; }
 .newsletter-form .nf-form-input input:-moz-placeholder { opacity: 1 !important; font-style: normal !important; color: #161615 !important; }
 .newsletter-form .nf-form-input input:-ms-input-placeholder { opacity: 1 !important; font-style: normal !important; color: #161615 !important; }
 
-.newsletter-form .optin-container,
+
 .newsletter-form label,
 .newsletter-form p:empty { display: none; }
 
@@ -2282,6 +2250,7 @@ body.is-mac .quicklinks.links .ql-list { margin: -161px 0 0 343px; }
 .newsletter-form .form-close:hover:before,
 .newsletter-form .form-close:hover:after { background: #161615; }
 
+.newsletter-form .optin-container  { position: absolute; }
 
 
 
