--- a/css/zzz-ajout-dweb.css
+++ b/css/zzz-ajout-dweb.css
@@ -64,3 +64,10 @@ display : block !important;
 	font-weight: bold !important;
 	color: #F4080C !important;
 }
+
+
+
+
+.block.block-small.quicklinks.bt-cta li:first-child {
+    margin-bottom: 8px;
+}
