--- a/css/styles-gourmet.css
+++ b/css/styles-gourmet.css
@@ -1591,3 +1591,6 @@ header .cols { display: -webkit-box ; display: -ms-flexbox ; display: flex ; -ms
 .newsletter-form .nf-main-content form .nf-form-item .right-col .optin-container .nf-form-input label:hover { opacity: 0.7 ;}
 .newsletter-form .nf-main-content form .nf-form-item .right-col .optin-container .nf-form-input label:before { content: '' ; display: block ; width: 19px ; height: 19px ; border: 1px solid #F2EAE2 ; border-radius: 4px ; position: absolute ; left: 0 ; top: 0 ;}
 .newsletter-form .nf-main-content form .nf-form-item .right-col .optin-container .nf-form-input label:after { content: '' ; display: block ; width: 11px ; height: 7px ; position: absolute ; left: 5px ; top: 7px ; background-image: url(images/check.svg) ; opacity: 0 ;}
+
+
+#zone1 .quicklinks.links .ql-list li:nth-child(3), .header .newsletter-form { display: none; }
