--- a/css/styles-gourmet.css
+++ b/css/styles-gourmet.css
@@ -260,7 +260,7 @@ to { top: 0;}}
   Actus
 \* ------------------------------------------------------------ */
 .list-articles.actus { position: relative; max-width: 1120px; margin: 0 auto;}
-.list-articles.actus:before { content: ''; position: absolute; width: 100%; height: 100%; top: 0; left: 0; opacity: 1; visibility: visible; background: #fff url(images/loader.gif) no-repeat center center; z-index: 10; -webkit-transition: opacity .3s, visibility .3s; -o-transition: opacity .3s, visibility .3s; transition: opacity .3s, visibility .3s;}
+.list-articles.actus:before { content: ''; position: absolute; width: 100%; height: 100%; top: 0; left: 0; opacity: 1; visibility: visible; background: #fff url(images/loader.png) no-repeat center center; z-index: 10; -webkit-transition: opacity .3s, visibility .3s; -o-transition: opacity .3s, visibility .3s; transition: opacity .3s, visibility .3s;}
 .list-articles.actus.loaded:before { opacity: 0; visibility: hidden;}
 .list-articles.actus.loaded .la-slider { opacity: 1;}
 
@@ -1587,5 +1587,31 @@ header .cols { display: -webkit-box; display: -ms-flexbox; display: flex; -ms-fl
 .newsletter-form .nf-main-content form .nf-form-item .right-col .optin-container .nf-form-input input:checked + label:after { opacity: 1;}
 .newsletter-form .nf-main-content form .nf-form-item .right-col .optin-container .nf-form-input label { font-family: 'Flama'; font-style: normal; font-weight: normal; font-size: 13px; line-height: 19px; color: rgba(255, 255, 255, 0.7); margin: 0; position: relative; display: inline-block; padding-left: 10px; -webkit-transition: all 0.2s ease-in-out; -o-transition: all 0.2s ease-in-out; transition: all 0.2s ease-in-out;}
 
+/*.newsletter-form .nf-main-content form .nf-form-item .right-col .optin-container .nf-form-input label:hover {
+  opacity: 0.7;
+}*/
 
+/*.newsletter-form .nf-main-content form .nf-form-item .right-col .optin-container .nf-form-input label:before {
+  content: '';
+  display: block;
+  width: 19px;
+  height: 19px;
+  border: 1px solid #F2EAE2;
+  border-radius: 4px;
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+
+.newsletter-form .nf-main-content form .nf-form-item .right-col .optin-container .nf-form-input label:after {
+  content: '';
+  display: block;
+  width: 11px;
+  height: 7px;
+  position: absolute;
+  left: 5px;
+  top: 7px;
+  background-image: url(images/check.svg);
+  opacity: 0;
+}*/
 #zone1 .quicklinks.links .ql-list li:nth-child(3), .header .newsletter-form { display: none;}
