--- a/css/styles-gourmet.css
+++ b/css/styles-gourmet.css
@@ -1393,8 +1393,8 @@ body.is-mac .block.block-small.quicklinks.links { padding: 0 97px 0 80px;}}
 .site-footer .ins-slider .feed-box .instagram-list .bg-box { width: 100%; padding-top: 100%; background-size: cover;}
 .site-footer .ins-slider .feed-box .instagram-list .bg-box img { display: none; width: 100%;}
 .site-footer .ins-slider .ins-link { text-align: center; padding-top: 42px;}
-.site-footer .ins-slider .ins-link a { -webkit-transition: all 0.2s ease-in-out; -o-transition: all 0.2s ease-in-out; transition: all 0.2s ease-in-out; font-family: 'Flama'; font-style: normal; font-weight: normal; font-size: 14px; line-height: 17px; color: #FFFFFF; opacity: 0.4; text-decoration: none;}
-.site-footer .ins-slider .ins-link a:hover { opacity: 1;}
+.site-footer .ins-slider .ins-link a { -webkit-transition: all 0.2s ease-in-out; -o-transition: all 0.2s ease-in-out; transition: all 0.2s ease-in-out; font-family: 'Flama'; font-style: normal; font-weight: normal; font-size: 14px; line-height: 17px; color: #FFFFFF; opacity: 0.9; text-decoration: none;}
+.site-footer .ins-slider .ins-link a:hover { opacity: 1; color:#F7786B ; }
 .site-footer .quicklinks.footer { max-width: 1220px; padding: 59px 50px 44px 50px; margin: 0 auto;}
 .lang-switcher .ls-lang-item .ls-lang-link abbr { display: inline-block;}
 .lang-switcher .ls-lang-item.is-active .ls-lang-link abbr { text-decoration: none;}
@@ -1564,7 +1564,7 @@ header .cols { display: -webkit-box; display: -ms-flexbox; display: flex; -ms-fl
 .newsletter-form .nf-main-content form .nf-form-item .left-col { width: 355px;}
 @media (max-width: 900px) { .newsletter-form .nf-main-content form .nf-form-item .left-col { width: 100%; margin-bottom: 10px;}}
 
-.newsletter-form .nf-main-content form .nf-form-item .left-col p { font-family: 'Flama'; font-style: normal; font-weight: normal; font-size: 15px; line-height: 160%; text-align: right; letter-spacing: 0.01em; color: #FFFFFF;}
+.newsletter-form .nf-main-content form .nf-form-item .left-col p { font-family: 'Flama'; font-style: normal; font-weight: normal; font-size: 15px; line-height: 160%; text-align: right; letter-spacing: 0.01em; color: #FFFFFF; margin-top: 30px; }
 @media (max-width: 900px) { .newsletter-form .nf-main-content form .nf-form-item .left-col p { text-align: center;}}
 
 .newsletter-form .nf-main-content form .nf-form-item .right-col { width: 414px; padding-top: 9px;}
@@ -1582,36 +1582,11 @@ header .cols { display: -webkit-box; display: -ms-flexbox; display: flex; -ms-fl
 .newsletter-form .nf-main-content form .nf-form-item .right-col .form-field-box .nf-form-submit .btn-primary:hover i { right: -5px;}
 .newsletter-form .nf-main-content form .nf-form-item .right-col .form-field-box .nf-form-submit .btn-primary i { vertical-align: initial; display: inline-block; width: 13px; height: 9px; background-image: url(images/ico-arrow.svg); background-size: cover; margin-right: 10px; -webkit-transition: all 0.2s ease-in-out; -o-transition: all 0.2s ease-in-out; transition: all 0.2s ease-in-out; position: relative; right: 0;}
 .newsletter-form .nf-main-content form .nf-form-item .right-col .optin-container { padding-top: 15px; text-align: center;}
-.newsletter-form .nf-main-content form .nf-form-item .right-col .optin-container .nf-form-input { width: 100%;}
-.newsletter-form .nf-main-content form .nf-form-item .right-col .optin-container .nf-form-input input { /*display: none;*/}
+.newsletter-form .nf-main-content form .nf-form-item .right-col .optin-container .nf-form-input { width: 100%; font-size: 12px; }
+.newsletter-form .nf-main-content form .nf-form-item .right-col .optin-container .nf-form-input input { margin-right: 10px; }
 .newsletter-form .nf-main-content form .nf-form-item .right-col .optin-container .nf-form-input input:checked + label:after { opacity: 1;}
 .newsletter-form .nf-main-content form .nf-form-item .right-col .optin-container .nf-form-input label { font-family: 'Flama'; font-style: normal; font-weight: normal; font-size: 13px; line-height: 19px; color: rgba(255, 255, 255, 0.7); margin: 0; position: relative; display: inline-block; padding-left: 10px; -webkit-transition: all 0.2s ease-in-out; -o-transition: all 0.2s ease-in-out; transition: all 0.2s ease-in-out;}
 
-/*.newsletter-form .nf-main-content form .nf-form-item .right-col .optin-container .nf-form-input label:hover {
-  opacity: 0.7;
-}*/
 
-/*.newsletter-form .nf-main-content form .nf-form-item .right-col .optin-container .nf-form-input label:before {
-  content: '';
-  display: block;
-  width: 19px;
-  height: 19px;
-  border: 1px solid #F2EAE2;
-  border-radius: 4px;
-  position: absolute;
-  left: 0;
-  top: 0;
-}
-
-.newsletter-form .nf-main-content form .nf-form-item .right-col .optin-container .nf-form-input label:after {
-  content: '';
-  display: block;
-  width: 11px;
-  height: 7px;
-  position: absolute;
-  left: 5px;
-  top: 7px;
-  background-image: url(images/check.svg);
-  opacity: 0;
-}*/
 #zone1 .quicklinks.links .ql-list li:nth-child(3), .header .newsletter-form { display: none;}
+.newsletter-form .nf-main-content form label[for=nf1] { display: none!important; }
