--- a/css/zzz-ajout-dweb.css
+++ b/css/zzz-ajout-dweb.css
@@ -85,3 +85,7 @@ display : block !important;
 .article-wrapper ul {
     padding-top: 60px !important;
 }
+
+.content873301 .article-content .focus2 {
+    text-align: center;
+}
