--- a/css/zzz-ajout-dweb.css
+++ b/css/zzz-ajout-dweb.css
@@ -82,7 +82,7 @@ display : block !important;
 }
 .node1383312 #zone2 {width: 100%  !important}
 
-.article-wrapper ul {
+.catalogue .article-wrapper ul {
     padding-top: 60px !important;
 }
 
