--- a/css/zzz-ajout-dweb.css
+++ b/css/zzz-ajout-dweb.css
@@ -98,3 +98,6 @@ display : block !important;
 .quicklinks.links .ql-list li:nth-child(1) .btn-primary:before {
     background-image: none;
 }
+.icon-search {
+    background-image: url(images/ico-search2.png);
+}
