--- a/css/styles-gourmet.css
+++ b/css/styles-gourmet.css
@@ -604,7 +604,7 @@ to { top: 0;}}
 .article_list .block-page.list-articles .list-grids-with-pagin { max-width: 980px; margin: 0 auto;}
 .article_list .block-page.list-articles .cxp-pagination { position: relative;}
 .article_list .block-page.list-articles:before { content: ''; position: absolute; top: 200px; left: -69px; background: url(images/cacao.png) no-repeat 0 0; width: 173px; height: 123px;}
-/*.article_list .block-page.list-articles .cxp-pagination .la-list { max-width: 980px; padding-bottom: 105px; margin: 0 auto 112px; border-bottom: 4px solid rgba(190, 183, 190, 0.2);}*/
+.article_list .block-page.list-articles .cxp-pagination .la-list { max-width: 980px;/* padding-bottom: 105px; margin: 0 auto 112px; border-bottom: 4px solid rgba(190, 183, 190, 0.2);*/}
 .article_list .block-page.list-articles .main-title-with-link { padding: 17px 0 20px; margin: 0 0 18px; border: 0; text-align: center;}
 .article_list .block-page.list-articles .main-title-with-link h1 { font-family: 'Flama', sans-serif; font-size: 40px; font-weight: 300; letter-spacing: -0.03em; color: #1d1d1b; text-transform: uppercase; float: none; padding: 0;}
 .article_list .block-page.list-articles .gla-item-content { position: static; min-height: 0; padding-top: 16px; background: #fff;}
@@ -1246,7 +1246,7 @@ body.is-mac .block.block-small.quicklinks.links { padding: 0 97px 0 80px;}}
 .list-articles.actus .la-item-content .la-item-title a { font-family: 'Flama'; font-style: normal; font-weight: 300; font-size: 23px; line-height: 31px; color: #1D1D1B;}
 .list-articles.actus .la-item-content .la-item-title a strong { font-weight: 500;}
 .list-articles.actus .la-item-content .la-item-btn .btn-primary { font-family: 'Flama'; font-style: normal; font-weight: 500; font-size: 10px; line-height: 21px; letter-spacing: 0.5px; color: #FFFFFF; background: #F7786B;}
-.four-cols-img-slider { position: relative; padding-top: 82px; padding-bottom: 106px;}
+.four-cols-img-slider { position: relative; padding-top: 82px; padding-bottom: 66px;}
 .four-cols-img-slider:after { content: ''; position: absolute; width: 143px; height: 161px; top: 115px; left: -14px; background: url(images/basislic.png) no-repeat 0 0; background-size: cover;}
 .four-cols-img-slider .content { max-width: 1220px; padding: 0 50px; margin: 0 auto; position: relative; z-index: 2;}
 .four-cols-img-slider .text-row { margin-bottom: 58px;}
