--- a/css/styles-gourmet.css
+++ b/css/styles-gourmet.css
@@ -604,7 +604,7 @@ to { top: 0;}}
 .article_list .block-page.list-articles .list-grids-with-pagin { max-width: 980px; margin: 0 auto;}
 .article_list .block-page.list-articles .cxp-pagination { position: relative;}
 .article_list .block-page.list-articles:before { content: ''; position: absolute; top: 200px; left: -69px; background: url(images/cacao.png) no-repeat 0 0; width: 173px; height: 123px;}
-.article_list .block-page.list-articles .cxp-pagination .la-list { max-width: 980px;/* padding-bottom: 105px; margin: 0 auto 112px; border-bottom: 4px solid rgba(190, 183, 190, 0.2);*/}
+.article_list .block-page.list-articles .cxp-pagination .la-list { max-width: 980px; margin: auto; }/* padding-bottom: 105px; margin: 0 auto 112px; border-bottom: 4px solid rgba(190, 183, 190, 0.2);*/}
 .article_list .block-page.list-articles .main-title-with-link { padding: 17px 0 20px; margin: 0 0 18px; border: 0; text-align: center;}
 .article_list .block-page.list-articles .main-title-with-link h1 { font-family: 'Flama', sans-serif; font-size: 40px; font-weight: 300; letter-spacing: -0.03em; color: #1d1d1b; text-transform: uppercase; float: none; padding: 0;}
 .article_list .block-page.list-articles .gla-item-content { position: static; min-height: 0; padding-top: 16px; background: #fff;}
@@ -1339,7 +1339,7 @@ body.is-mac .block.block-small.quicklinks.links { padding: 0 97px 0 80px;}}
 .block-page.partner:after { content: ''; position: absolute; width: 142px; height: 92px; bottom: 71px; left: 50%; -webkit-transform: translateX(-50%); -ms-transform: translateX(-50%); transform: translateX(-50%); background: url(images/piment.png) no-repeat 0 0; background-size: cover;}
 .site-footer { overflow: hidden; padding-top: 0; padding-bottom: 0;}
 .site-footer .inside { max-width: 100%;}
-.site-footer .follow-block { padding: 75px 0 39px 0; background-color: #383432; background-image: url(images/footer-bg.svg); background-repeat: no-repeat; background-position: center 111px; background-size: 596px 489px;}
+.site-footer .follow-block { padding: 75px 0 75px 0; background-color: #383432; background-image: url(images/footer-bg.svg); background-repeat: no-repeat; background-position: center 111px; background-size: 596px 489px;}
 .site-footer .social-row { padding: 21px 0 17px 0; max-width: 606px; margin: 0 auto; border-top: 2px solid #E3D3C3; border-bottom: 2px solid #E3D3C3; display: -webkit-box; display: -ms-flexbox; display: flex; -ms-flex-wrap: wrap; flex-wrap: wrap; -webkit-box-pack: justify; -ms-flex-pack: justify; justify-content: space-between;}
 .site-footer .social-row .title-box h2 { font-family: 'Flama'; font-style: normal; font-weight: normal; font-size: 27px; line-height: 130%; letter-spacing: 0.03em; text-transform: uppercase; color: #FFFFFF; margin: 0; padding: 0; border: 0;}
 .site-footer .social-row .title-box h2 strong { font-weight: 500;}
@@ -1564,7 +1564,7 @@ header .cols { display: -webkit-box; display: -ms-flexbox; display: flex; -ms-fl
 
 .newsletter-form { max-width: 866px; margin: 0 auto; padding: 56px 30px 0 30px;}
 .newsletter-form .nf-main-content { padding: 0; margin: 0; background: none; color: #FFF;}
-.newsletter-form .nf-main-content .nf-title { font-family: 'Flama'; font-style: normal; font-weight: normal; font-size: 25px; line-height: 130%; text-align: center; letter-spacing: -0.01em; text-transform: uppercase; color: #FFFFFF; margin: 0; padding: 0; border: none; margin-bottom: 40px;}
+.newsletter-form .nf-main-content .nf-title { font-family: 'Flama'; font-style: normal; font-weight: normal; font-size: 25px; line-height: 130%; text-align: center; letter-spacing: -0.01em; text-transform: uppercase; color: #FFFFFF; margin: 0; padding: 0; border: none; margin-bottom: 0;}
 .newsletter-form .nf-main-content form label[for="nf1"] { display: none;}
 .newsletter-form .nf-main-content form .nf-form-item { display: -webkit-box; display: -ms-flexbox; display: flex; -ms-flex-wrap: wrap; flex-wrap: wrap; -webkit-box-pack: justify; -ms-flex-pack: justify; justify-content: space-between;}
 .newsletter-form .nf-main-content form .nf-form-item .left-col { width: 355px;}
